<resources>
    <string name="app_name">cXor</string>
    <string name="prompt_password">Password</string>
    <string name="decode">Decode</string>
    <string name="open">Open</string>
    <string name="enter">Enter</string>
    <string name="permission_rationale">"File system permissions are needed for reading encrypted files."</string>
    <string name="save">Save</string>
    <string name="s_new">New</string>
    <string name="clear">Clear</string>
    <string name="edit">Edit</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="share">Share</string>
    <string name="close">Close</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string-array name="encoding_format">
        <item>Text</item>
        <item>Xor</item>
        <item>Xor zipped</item>
        <item>Xor2</item>
        <item>Xor2 zipped</item>
    </string-array>
</resources>
